# price_action_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
config/: prometheus.yml  settings.yaml
docs/: CHANGELOG.md  DEPLOYMENT.md  PHASE2_ROADMAP.md  WORKFLOW.md
scripts/: backfill_coinalyze.py  backfill_data.py  collect_binance.py  collect_coinalyze.py  collect_orderbook.py  collect_sentiment.py  daily_retrain.py  debug_api.py  healthcheck.py  migrate_to_postgres.py  run_backtest.py  run_prediction.py  train_model.py  weekly_hpo.py
src/: pipeline.py
src/api/: __init__.py  binance_client.py  bitunix_client.py  bitunix_ws.py  coinalyze_client.py  rate_limiter.py  sentiment_client.py
src/backtesting/: __init__.py  costs.py  engine.py  metrics.py  portfolio.py  signals.py
src/data/: backfill.py  collector.py  postgres_storage.py  quality.py  storage.py
src/features/: derivatives.py  indicators.py  orderbook.py  sentiment.py
src/model/: __init__.py  ab_testing.py  architecture.py  dataset.py  drift.py  ensemble.py  gbm.py  hpo.py  importance.py  meta_learning.py  multi_ensemble.py  predictor.py  regime.py  tft.py  trainer.py  uncertainty.py
src/monitoring/: metrics.py
src/notifications/: discord_notifier.py  dispatcher.py  email_notifier.py  telegram_notifier.py
src/risk/: __init__.py  drawdown.py  portfolio_risk.py  (+2 more)
tests/: conftest.py  test_dataset.py  test_ensemble.py  test_indicators.py  test_predictor.py  test_quality.py  test_scoring.py
(+3 files in other folders)
